--- a/index.mdx
+++ b/index.mdx
@@ -1095,7 +1095,7 @@ const person = {
 
 </Step>
 
-<Step subtitle="lodash와 ramda의 omit으로 age를 지운다">
+<Step subtitle="lodash의 omit으로 age를 지운다">
 
 ```jsx file=./src/CodeStyle/chaining-2.js title="메소드 체이닝"
 ```
